# bevy_pbr_blend_experiments

./: Cargo.toml
assets/: shader.wgsl
assets/models/: test.gltf
assets/temp/: wear_mask.ktx2
assets/textures/: base_color.ktx2  wear_mask.ktx2
scripts/: process_assets.sh
src/: main.rs
