[package]
name = "bevy_pbr_blend"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["jpeg", "debug", "free_camera", "file_watcher"] }
bevy-inspector-egui = "0.36.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
